[package]
name = "jsnpar"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Rust JSON parser implementation using parser combinators."
readme = "README.md"
authors = ["yarso-su (https://github.com/yarso-su)"]
repository = "https://github.com/yarso-su/jsnpar"
keywords = ["json", "crate", "parser"]
categories = ["parser-implementations"]
